class renommées et réorganisation + img des activités centrés

--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 
   <body>
     <header id="header">
-      <a id="logo_main" href="index.html"><img src="public/images/logo/Reservia.svg" alt="logo du site" /></a>
-      <div class="header-right">
+      <a id="logo-main" href="index.html"><img src="public/images/logo/Reservia.svg" alt="logo du site" /></a>
+      <div class="header-right-corner">
         <nav class="nav">
-          <a class="nav-hébergements" href="#">Hebergements</a>
-          <a class="nav-activités" href="#">Activités</a>
+          <a class="nav-hebergements" href="#hebergements">Hébergements</a>
+          <a class="nav-activities" href="#activities">Activités</a>
         </nav>
         <a class="sinscrire" href="#">S'inscrire</a>
       </div>
     </header>
     <main id="sections">
-      <section id="section1">
-        <div class="titre1">
+      <section id="research">
+        <div class="research-title">
           <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
           <p>En plein centre ville ou en pleine nature</p>
         </div>
 
-        <div class="recherche">
+        <div class="search-bar">
           <form action="#" method="POST">
             <p>
               <label for="ville"><i class="fas fa-map-marker-alt"></i></label>
@@ -37,189 +37,188 @@
           </form>
           <div class="filters">
             <h3>Filtres</h3>
-            <div class="filter_container">
-              <div class="search_filter_icon">
+            <div class="filter-container">
+              <div class="search-filter-icon">
                 <i class="fas fa-money-bill-wave"></i>
               </div>
-              <p class="search_filter_name">Economiques</p>
+              <p class="search-filter-name">Economiques</p>
             </div>
-            <div class="filter_container">
-              <div class="search_filter_icon">
+            <div class="filter-container">
+              <div class="search-filter-icon">
                 <i class="fas fa-child"></i>
               </div>
-              <p class="search_filter_name">Familial</p>
+              <p class="search-filter-name">Familial</p>
             </div>
-            <div class="filter_container">
-              <div class="search_filter_icon">
+            <div class="filter-container">
+              <div class="search-filter-icon">
                 <i class="fas fa-heart"></i>
               </div>
-              <p class="search_filter_name">Romantique</p>
+              <p class="search-filter-name">Romantique</p>
             </div>
-            <div class="filter_container">
-              <div class="search_filter_icon">
+            <div class="filter-container">
+              <div class="search-filter-icon">
                 <i class="fas fa-dog"></i>
               </div>
-              <p class="search_filter_name">Animaux autorisés</p>
+              <p class="search-filter-name">Animaux autorisés</p>
             </div>
           </div>
           <p class="nblogements"><i class="fas fa-info"></i> Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
       </section>
-
-      <section id="section2">
-        <h2>Hébergements à Marseille</h2>
-        <div class="cards">
-          <a class="card_a" href="#">
-            <div class="card">
-              <div class="card_img"><img src="public\images\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="chambre" /></div>
-              <div class="card_container">
-                <h3>Auberges de la canebière</h3>
-                <p>Nuit à partir de <strong>25€</strong></p>
-                <p class="etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
+      <section id="hebergements">
+        <article id="hebergements-marseille">
+          <h2>Hébergements à Marseille</h2>
+          <div class="cards">
+            <a class="card-a" href="#">
+              <div class="card">
+                <div class="card-img"><img src="public\images\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="chambre" /></div>
+                <div class="card-container">
+                  <h3>Auberges de la canebière</h3>
+                  <p>Nuit à partir de <strong>25€</strong></p>
+                  <p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
+                </div>
               </div>
-            </div>
-          </a>
-          <a class="card_a" href="#">
-            <div class="card">
-              <div class="card_img"><img src="public\images\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre" /></div>
-              <div class="card_container">
-                <h3>Hôtel du port</h3>
-                <p>Nuit à partir de <strong>52€</strong></p>
-                <p class="etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+            </a>
+            <a class="card-a" href="#">
+              <div class="card">
+                <div class="card-img"><img src="public\images\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre" /></div>
+                <div class="card-container">
+                  <h3>Hôtel du port</h3>
+                  <p>Nuit à partir de <strong>52€</strong></p>
+                  <p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+                </div>
               </div>
-            </div>
-          </a>
-          <a class="card_a" href="#">
-            <div class="card">
-              <div class="card_img"><img src="public\images\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre" /></div>
-              <div class="card_container">
-                <h3>Hôtel Les mouettes</h3>
-                <p>Nuit à partir de <strong>76€</strong></p>
-                <p class="etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
+            </a>
+            <a class="card-a" href="#">
+              <div class="card">
+                <div class="card-img"><img src="public\images\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre" /></div>
+                <div class="card-container">
+                  <h3>Hôtel Les mouettes</h3>
+                  <p>Nuit à partir de <strong>76€</strong></p>
+                  <p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
+                </div>
               </div>
-            </div>
-          </a>
-          <a class="card_a" href="#">
-            <div class="card">
-              <div class="card_img"><img src="public\images\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre" /></div>
-              <div class="card_container">
-                <h3>Hôtel de la mer</h3>
-                <p>Nuit à partir de <strong>46€</strong></p>
-                <p class="etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i><i class="fas fa-star gris"></i></p>
+            </a>
+            <a class="card-a" href="#">
+              <div class="card">
+                <div class="card-img"><img src="public\images\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre" /></div>
+                <div class="card-container">
+                  <h3>Hôtel de la mer</h3>
+                  <p>Nuit à partir de <strong>46€</strong></p>
+                  <p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i><i class="fas fa-star gris"></i></p>
+                </div>
               </div>
-            </div>
-          </a>
-          <a class="card_a" href="#">
-            <div class="card">
-              <div class="card_img"><img src="public\images\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre" /></div>
-              <div class="card_container">
-                <h3>Auberge Le Panier</h3>
-                <p>Nuit à partir de <strong>23€</strong></p>
-                <p class="etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
+            </a>
+            <a class="card-a" href="#">
+              <div class="card">
+                <div class="card-img"><img src="public\images\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre" /></div>
+                <div class="card-container">
+                  <h3>Auberge Le Panier</h3>
+                  <p>Nuit à partir de <strong>23€</strong></p>
+                  <p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
+                </div>
               </div>
-            </div>
-          </a>
-          <a class="card_a" href="#">
-            <div class="card">
-              <div class="card_img"><img src="public\images\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre" /></div>
-              <div class="card_container">
-                <h3>Hôtel chez Amina</h3>
-                <p>Nuit à partir de <strong>96€</strong></p>
-                <p class="etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+            </a>
+            <a class="card-a" href="#">
+              <div class="card">
+                <div class="card-img"><img src="public\images\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre" /></div>
+                <div class="card-container">
+                  <h3>Hôtel chez Amina</h3>
+                  <p>Nuit à partir de <strong>96€</strong></p>
+                  <p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+                </div>
               </div>
-            </div>
-          </a>
-        </div>
-        <a href="#" class="afficherplus">Afficher plus</a>
+            </a>
+          </div>
+          <a href="#" class="afficherplus">Afficher plus</a>
+        </article>
+        <aside id="most-popular">
+          <header class="title-mostpopular">
+            <h2>Les plus populaires</h2>
+            <i class="fas fa-chart-line"></i>
+          </header>
+          <div class="cards2">
+            <a href="#">
+              <div class="card2">
+                <img class="card2-img" src="public\images\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre" />
+                <div class="card2-container">
+                  <h3 class="card2-container-h3">Hôtel Le soleil du matin</h3>
+                  <p>Nuit à partir de 128€</p>
+                  <div class="card2-stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+                </div>
+              </div>
+            </a>
+            <a href="#">
+              <div class="card2">
+                <img class="card2-img" src="public\images\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre" />
+                <div class="card2-container">
+                  <h3 class="card2-container-h3">Au coeur de l'eau Chambres d'hôtes</h3>
+                  <p>Nuit à partir de 71€</p>
+                  <div class="card2-stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></div>
+                </div>
+              </div>
+            </a>
+            <a href="#">
+              <div class="card2">
+                <img class="card2-img" src="public\images\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre" />
+                <div class="card2-container">
+                  <h3 class="card2-container-h3">Hôtel tout bleu et blanc</h3>
+                  <p>Nuit à partir de 68€</p>
+                  <div class="card2-stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </aside>
       </section>
-
-      <aside id="MostPopular">
-        <header class="title_mostpopular">
-          <h2>Les plus populaires</h2>
-          <i class="fas fa-chart-line"></i>
-        </header>
-        <div class="cards2">
-          <a href="#">
-            <div class="card2">
-              <img class="card2_img" src="public\images\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre" />
-              <div class="card2_container">
-                <h3 class="card2_container_h3">Hôtel Le soleil du matin</h3>
-                <p>Nuit à partir de 128€</p>
-                <div class="card2_etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
-              </div>
-            </div>
-          </a>
-          <a href="#">
-            <div class="card2">
-              <img class="card2_img" src="public\images\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre" />
-              <div class="card2_container">
-                <h3 class="card2_container_h3">Au coeur de l'eau Chambres d'hôtes</h3>
-                <p>Nuit à partir de 71€</p>
-                <div class="card2_etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></div>
-              </div>
-            </div>
-          </a>
-          <a href="#">
-            <div class="card2">
-              <img class="card2_img" src="public\images\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre" />
-              <div class="card2_container">
-                <h3 class="card2_container_h3">Hôtel tout bleu et blanc</h3>
-                <p>Nuit à partir de 68€</p>
-                <div class="card2_etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></div>
-              </div>
-            </div>
-          </a>
-        </div>
-      </aside>
-
-      <section id="section3">
+      <section id="activities">
         <header id="title_actvities">
           <h2>Activités à Marseille</h2>
         </header>
-        <div class="activities">
-          <div class="activities1">
-            <div class="activity_big">
+        <div class="activities-cards">
+          <div class="activities-cards1">
+            <div class="activity-card-big">
               <a href="#">
-                <div class="activity_big_container">
-                  <img src="public\images\activites\2_large\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="paysage" />
+                <div class="activity-card-big-container">
+                  <img class="img-vieux-port" src="public\images\activites\2_large\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux port" />
                   <h3>Vieux Port</h3>
                 </div>
               </a>
             </div>
-            <div class="activities_SetM">
+            <div class="activity-card-S-M">
               <a href="#">
-                <div class="activity_medium_container">
-                  <img src="public\images\activites\3_medium\paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="paysage" />
+                <div class="activity-card-medium-container">
+                  <img class="img-fort-pomegues" src="public\images\activites\3_medium\paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="fort de Pomègues" />
                   <h3>Fort de Pomègues</h3>
                 </div>
               </a>
               <a href="#">
-                <div class="activity_small_container">
-                  <img src="public\images\activites\3_medium\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="paysage" />
+                <div class="activity-card-small-container">
+                  <img class="img-ile-frioul" src="public\images\activites\3_medium\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="ile de frioul" />
                   <h3>Île du Frioul</h3>
                 </div>
               </a>
             </div>
           </div>
-          <div class="activities2">
-            <div class="activity_big">
+          <div class="activities-cards2">
+            <div class="activity-card-big">
               <a href="#">
-                <div class="activity_big_container">
-                  <img src="public\images\activites\3_medium\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="paysage" />
+                <div class="activity-card-big-container">
+                  <img class="img-parc-calanques" src="public\images\activites\3_medium\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parc nationnal de calanques" />
                   <h3>Parc Nationnal de Calanques</h3>
                 </div>
               </a>
             </div>
-            <div class="activities_SetM">
+            <div class="activity-card-S-M">
               <a href="#">
-                <div class="activity_small_container">
-                  <img src="public\images\activites\3_medium\florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="paysage" />
+                <div class="activity-card-small-container">
+                  <img class="img-notre-dame" src="public\images\activites\3_medium\florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notre Notre-Dame-de-la-Garde" />
                   <h3>Notre-Dame-de-la-Garde</h3>
                 </div>
               </a>
               <a href="#">
-                <div class="activity_medium_container">
-                  <img src="public\images\activites\3_medium\lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="paysage" />
+                <div class="activity-card-medium-container">
+                  <img class="img-parc-longchamp" src="public\images\activites\3_medium\lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parc Longchamp" />
                   <h3>Parc Longchamp</h3>
                 </div>
               </a>
@@ -229,18 +228,18 @@
       </section>
     </main>
     <footer id="footer">
-      <div class="footer_div">
+      <div class="footer-div">
         <h2>A propos</h2>
         <a href="#">Fonctionnement du site</a>
         <a href="#">Conditions générakes de vente</a>
         <a href="#">Données de confidentalité</a>
       </div>
-      <div class="footer_div">
+      <div class="footer-div">
         <h2>Nos hébergements</h2>
         <a href="#">Charte qualité</a>
         <a href="#">Soumettre votre hôtel</a>
       </div>
-      <div class="footer_div">
+      <div class="footer-div">
         <h2>Assistance</h2>
         <a href="#">Centre d'aide</a>
         <a href="#">Nosu contacter</a>
