--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Rerervia</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="public/style.css" />
+
     <!--link rel='stylesheet' type='text/css' media='screen' href='main.css'-->
   </head>
 
@@ -65,13 +66,13 @@
           <p class="nblogements"><i class="fas fa-info"></i> Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
       </section>
-      <section id="hebergements">
+      <div id="hebergements">
         <article id="hebergements-marseille">
           <h2>Hébergements à Marseille</h2>
           <div class="cards">
             <a class="card-a" href="#">
               <div class="card">
-                <div class="card-img"><img src="public\images\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="chambre" /></div>
+                <div class="card-img"><img src="public/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="chambre" /></div>
                 <div class="card-container">
                   <h3>Auberges de la canebière</h3>
                   <p>Nuit à partir de <strong>25€</strong></p>
@@ -81,7 +82,7 @@
             </a>
             <a class="card-a" href="#">
               <div class="card">
-                <div class="card-img"><img src="public\images\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre" /></div>
+                <div class="card-img"><img src="public/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre" /></div>
                 <div class="card-container">
                   <h3>Hôtel du port</h3>
                   <p>Nuit à partir de <strong>52€</strong></p>
@@ -91,7 +92,7 @@
             </a>
             <a class="card-a" href="#">
               <div class="card">
-                <div class="card-img"><img src="public\images\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre" /></div>
+                <div class="card-img"><img src="public/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre" /></div>
                 <div class="card-container">
                   <h3>Hôtel Les mouettes</h3>
                   <p>Nuit à partir de <strong>76€</strong></p>
@@ -101,7 +102,7 @@
             </a>
             <a class="card-a" href="#">
               <div class="card">
-                <div class="card-img"><img src="public\images\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre" /></div>
+                <div class="card-img"><img src="public/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre" /></div>
                 <div class="card-container">
                   <h3>Hôtel de la mer</h3>
                   <p>Nuit à partir de <strong>46€</strong></p>
@@ -111,7 +112,7 @@
             </a>
             <a class="card-a" href="#">
               <div class="card">
-                <div class="card-img"><img src="public\images\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre" /></div>
+                <div class="card-img"><img src="public/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre" /></div>
                 <div class="card-container">
                   <h3>Auberge Le Panier</h3>
                   <p>Nuit à partir de <strong>23€</strong></p>
@@ -121,7 +122,7 @@
             </a>
             <a class="card-a" href="#">
               <div class="card">
-                <div class="card-img"><img src="public\images\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre" /></div>
+                <div class="card-img"><img src="public/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre" /></div>
                 <div class="card-container">
                   <h3>Hôtel chez Amina</h3>
                   <p>Nuit à partir de <strong>96€</strong></p>
@@ -140,7 +141,7 @@
           <div class="cards2">
             <a href="#">
               <div class="card2">
-                <img class="card2-img" src="public\images\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre" />
+                <img class="card2-img" src="public/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre" />
                 <div class="card2-container">
                   <h3 class="card2-container-h3">Hôtel Le soleil du matin</h3>
                   <p>Nuit à partir de 128€</p>
@@ -150,7 +151,7 @@
             </a>
             <a href="#">
               <div class="card2">
-                <img class="card2-img" src="public\images\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre" />
+                <img class="card2-img" src="public/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre" />
                 <div class="card2-container">
                   <h3 class="card2-container-h3">Au coeur de l'eau Chambres d'hôtes</h3>
                   <p>Nuit à partir de 71€</p>
@@ -160,7 +161,7 @@
             </a>
             <a href="#">
               <div class="card2">
-                <img class="card2-img" src="public\images\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre" />
+                <img class="card2-img" src="public/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre" />
                 <div class="card2-container">
                   <h3 class="card2-container-h3">Hôtel tout bleu et blanc</h3>
                   <p>Nuit à partir de 68€</p>
@@ -170,7 +171,7 @@
             </a>
           </div>
         </aside>
-      </section>
+      </div>
       <section id="activities">
         <header id="title_actvities">
           <h2>Activités à Marseille</h2>
@@ -180,7 +181,7 @@
             <div class="activity-card-big">
               <a href="#">
                 <div class="activity-card-big-container">
-                  <img class="img-vieux-port" src="public\images\activites\2_large\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux port" />
+                  <img class="img-vieux-port" src="public/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="vieux port" />
                   <h3>Vieux Port</h3>
                 </div>
               </a>
@@ -188,13 +189,13 @@
             <div class="activity-card-S-M">
               <a href="#">
                 <div class="activity-card-medium-container">
-                  <img class="img-fort-pomegues" src="public\images\activites\3_medium\paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="fort de Pomègues" />
+                  <img class="img-fort-pomegues" src="public/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="fort de Pomègues" />
                   <h3>Fort de Pomègues</h3>
                 </div>
               </a>
               <a href="#">
                 <div class="activity-card-small-container">
-                  <img class="img-ile-frioul" src="public\images\activites\3_medium\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="ile de frioul" />
+                  <img class="img-ile-frioul" src="public/images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="ile de frioul" />
                   <h3>Île du Frioul</h3>
                 </div>
               </a>
@@ -204,7 +205,7 @@
             <div class="activity-card-big">
               <a href="#">
                 <div class="activity-card-big-container">
-                  <img class="img-parc-calanques" src="public\images\activites\3_medium\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parc nationnal de calanques" />
+                  <img class="img-parc-calanques" src="public/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="parc nationnal de calanques" />
                   <h3>Parc Nationnal de Calanques</h3>
                 </div>
               </a>
@@ -212,13 +213,13 @@
             <div class="activity-card-S-M">
               <a href="#">
                 <div class="activity-card-small-container">
-                  <img class="img-notre-dame" src="public\images\activites\3_medium\florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notre Notre-Dame-de-la-Garde" />
+                  <img class="img-notre-dame" src="public/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="notre Notre-Dame-de-la-Garde" />
                   <h3>Notre-Dame-de-la-Garde</h3>
                 </div>
               </a>
               <a href="#">
                 <div class="activity-card-medium-container">
-                  <img class="img-parc-longchamp" src="public\images\activites\3_medium\lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parc Longchamp" />
+                  <img class="img-parc-longchamp" src="public/images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="parc Longchamp" />
                   <h3>Parc Longchamp</h3>
                 </div>
               </a>
