--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
   <body>
     <header id="header">
-      <a id="logo-main" href="index.html"><img src="public/images/logo/Reservia.svg" alt="logo du site" /></a>    
-        <nav class="nav">
-          <a class="nav-hebergements" href="#hebergements">Hébergements</a>
-          <a class="nav-activities" href="#activities">Activités</a>
-          <a class="sinscrire" href="#">S'inscrire</a>
-      </div>
+      <a id="logo-main" href="index.html"><img src="public/images/logo/Reservia.svg" alt="logo du site" /></a>
+      <nav class="nav">
+        <a class="nav-hebergements" href="#hebergements">Hébergements</a>
+        <a class="nav-activities" href="#activities">Activités</a>
+      </nav>
+      <div class="sinscrire"><a href="#">S'inscrire</a></div>
     </header>
     <main id="sections">
       <section id="research">
@@ -27,11 +27,9 @@
 
         <div class="search-bar">
           <form action="#" method="POST">
-            <p>
-              <label for="ville"><i class="fas fa-map-marker-alt"></i></label>
-              <input type="text" name="ville" id="ville" placeholder="Marseille, France" maxlength="40" size="20" required />
-              <input type="submit" value="Rechercher" />
-            </p>
+            <label for="ville"><i class="fas fa-map-marker-alt"></i></label>
+            <input type="text" name="ville" id="ville" placeholder="Marseille, France" maxlength="40" size="20" required />
+            <input type="submit" value="Rechercher" />
           </form>
           <div class="filters">
             <h3>Filtres</h3>
