--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
             <i class="fas fa-chart-line"></i>
           </header>
           <div class="cards2">
-            <a href="#">
+            <a class="card2-a">
               <div class="card2">
-                <img class="card2-img" src="public/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre" />
+                <div class="card2-img"><img src="public/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre" /></div>
                 <div class="card2-container">
                   <h3 class="card2-container-h3">Hôtel Le soleil du matin</h3>
                   <p>Nuit à partir de 128€</p>
@@ -145,9 +145,9 @@
                 </div>
               </div>
             </a>
-            <a href="#">
+            <a class="card2-a">
               <div class="card2">
-                <img class="card2-img" src="public/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre" />
+                <div class="card2-img"><img src="public/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre" /></div>
                 <div class="card2-container">
                   <h3 class="card2-container-h3">Au coeur de l'eau Chambres d'hôtes</h3>
                   <p>Nuit à partir de 71€</p>
@@ -155,9 +155,9 @@
                 </div>
               </div>
             </a>
-            <a href="#">
+            <a class="card2-a">
               <div class="card2">
-                <img class="card2-img" src="public/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre" />
+                <div class="card2-img"><img src="public/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre" /></div>
                 <div class="card2-container">
                   <h3 class="card2-container-h3">Hôtel tout bleu et blanc</h3>
                   <p>Nuit à partir de 68€</p>
