--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Rerervia</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Rerervia</title>
     <link rel="stylesheet" href="public/style.css" />
-    <!--link rel='stylesheet' type='text/css' media='screen' href='main.css'-->
   </head>
 
   <body>
@@ -66,66 +65,78 @@
         <article id="hebergements-marseille">
           <h2>Hébergements à Marseille</h2>
           <div class="cards">
-            <a class="card-a" href="#">
-              <div class="card">
-                <div class="card-img"><img src="public/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="chambre" /></div>
-                <div class="card-container">
-                  <h3>Auberges de la canebière</h3>
-                  <p>Nuit à partir de <strong>25€</strong></p>
-                  <p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
+            <div class="card">
+              <a class="card-a" href="#">
+                <div class="card-contain">
+                  <div class="card-img"><img src="public/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="chambre" /></div>
+                  <div class="card-content">
+                    <h3>Auberges de la canebière</h3>
+                    <p>Nuit à partir de <strong>25€</strong></p>
+                    <p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
+                  </div>
                 </div>
-              </div>
-            </a>
-            <a class="card-a" href="#">
-              <div class="card">
-                <div class="card-img"><img src="public/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre" /></div>
-                <div class="card-container">
-                  <h3>Hôtel du port</h3>
-                  <p>Nuit à partir de <strong>52€</strong></p>
-                  <p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+              </a>
+            </div>
+            <div class="card">
+              <a class="card-a" href="#">
+                <div class="card-contain">
+                  <div class="card-img"><img src="public/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre" /></div>
+                  <div class="card-content">
+                    <h3>Hôtel du port</h3>
+                    <p>Nuit à partir de <strong>52€</strong></p>
+                    <p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+                  </div>
                 </div>
-              </div>
-            </a>
-            <a class="card-a" href="#">
-              <div class="card">
-                <div class="card-img"><img src="public/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre" /></div>
-                <div class="card-container">
-                  <h3>Hôtel Les mouettes</h3>
-                  <p>Nuit à partir de <strong>76€</strong></p>
-                  <p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
+              </a>
+            </div>
+            <div class="card">
+              <a class="card-a" href="#">
+                <div class="card-contain">
+                  <div class="card-img"><img src="public/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre" /></div>
+                  <div class="card-content">
+                    <h3>Hôtel Les mouettes</h3>
+                    <p>Nuit à partir de <strong>76€</strong></p>
+                    <p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
+                  </div>
                 </div>
-              </div>
-            </a>
-            <a class="card-a" href="#">
-              <div class="card">
-                <div class="card-img"><img src="public/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre" /></div>
-                <div class="card-container">
-                  <h3>Hôtel de la mer</h3>
-                  <p>Nuit à partir de <strong>46€</strong></p>
-                  <p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i><i class="fas fa-star gris"></i></p>
+              </a>
+            </div>
+            <div class="card">
+              <a class="card-a" href="#">
+                <div class="card-contain">
+                  <div class="card-img"><img src="public/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre" /></div>
+                  <div class="card-content">
+                    <h3>Hôtel de la mer</h3>
+                    <p>Nuit à partir de <strong>46€</strong></p>
+                    <p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i><i class="fas fa-star gris"></i></p>
+                  </div>
                 </div>
-              </div>
-            </a>
-            <a class="card-a" href="#">
-              <div class="card">
-                <div class="card-img"><img src="public/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre" /></div>
-                <div class="card-container">
-                  <h3>Auberge Le Panier</h3>
-                  <p>Nuit à partir de <strong>23€</strong></p>
-                  <p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
+              </a>
+            </div>
+            <div class="card">
+              <a class="card-a" href="#">
+                <div class="card-contain">
+                  <div class="card-img"><img src="public/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre" /></div>
+                  <div class="card-content">
+                    <h3>Auberge Le Panier</h3>
+                    <p>Nuit à partir de <strong>23€</strong></p>
+                    <p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
+                  </div>
                 </div>
-              </div>
-            </a>
-            <a class="card-a" href="#">
-              <div class="card">
-                <div class="card-img"><img src="public/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre" /></div>
-                <div class="card-container">
-                  <h3>Hôtel chez Amina</h3>
-                  <p>Nuit à partir de <strong>96€</strong></p>
-                  <p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+              </a>
+            </div>
+            <div class="card">
+              <a class="card-a" href="#">
+                <div class="card-contain">
+                  <div class="card-img"><img src="public/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre" /></div>
+                  <div class="card-content">
+                    <h3>Hôtel chez Amina</h3>
+                    <p>Nuit à partir de <strong>96€</strong></p>
+                    <p class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+                  </div>
                 </div>
-              </div>
-            </a>
+              </a>
+            </div>
           </div>
           <a href="#" class="afficherplus">Afficher plus</a>
         </article>
